@@ -1,7 +1,7 @@
 Summary: Mark5 utilities for the DiFX suite
 Name: mk5daemon
 Version: @version@
-Release: 3
+Release: 4
 License: GPL3
 Group: VLBI
 BuildRoot: /var/tmp/mk5daemon-@version@-buildroot
